Add logo image and fix logo sizing with cropped version

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="KazakhAgro — платформа для инвестиций в AI-тепличный комплекс на гидропонике. Опыт Антальи, потенциал Казахстана и ИИ.">
-  <meta name="keywords" content="AI теплица, гидропоника Казахстан, агротех инвестиции, Умут Четинер, Kazakhagro, теплица Алматы, ROI сельское хозяйство">
+  <meta name="description"
+    content="KazakhAgro — платформа для инвестиций в AI-тепличный комплекс на гидропонике. Опыт Антальи, потенциал Казахстана и ИИ.">
+  <meta name="keywords"
+    content="AI теплица, гидропоника Казахстан, агротех инвестиции, Умут Четинер, Kazakhagro, теплица Алматы, ROI сельское хозяйство">
   <meta name="author" content="Umut Çetiner | kazakhagro.com">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://www.kazakhagro.com">
@@ -13,20 +16,26 @@
   <link rel="alternate" hreflang="kk" href="https://www.kazakhagro.com">
   <link rel="alternate" hreflang="x-default" href="https://www.kazakhagro.com">
   <meta property="og:title" content="KazakhAgro | AI-тепличный комплекс на гидропонике — Инвестиционная платформа">
-  <meta property="og:description" content="Опыт Антальи, потенциал Казахстана и ИИ. Умут Четинер — 10+ лет в Анталье, 50+ га в Казахстане, модель «Нулевая ошибка».">
+  <meta property="og:description"
+    content="Опыт Антальи, потенциал Казахстана и ИИ. Умут Четинер — 10+ лет в Анталье, 50+ га в Казахстане, модель «Нулевая ошибка».">
   <meta property="og:url" content="https://www.kazakhagro.com">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="ru_RU">
   <title>KazakhAgro | AI-тепличный комплекс на гидропонике — Инвестиционная платформа</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=Outfit:wght@500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700&family=Outfit:wght@500;600;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a href="/" class="logo" aria-label="KazakhAgro Home">KazakhAgro</a>
+      <a href="/" class="logo" aria-label="KazakhAgro Home">
+        <img src="logo-cropped.png" alt="KazakhAgro — AI-Powered Agriculture & Investment">
+      </a>
       <nav class="nav" aria-label="Main navigation">
         <ul>
           <li><a href="#value" data-i18n="nav_value">Ценность</a></li>
@@ -34,7 +43,8 @@
           <li><a href="#pillars" data-i18n="nav_edge">Преимущества</a></li>
           <li><a href="#leadership" data-i18n="nav_leadership">Руководство</a></li>
           <li><a href="#contact" data-i18n="nav_contact">Контакты</a></li>
-          <li class="nav-cta-mobile"><a href="#investment-deck" class="btn btn-primary" data-i18n="cta_deck">Получить инвест-дек</a></li>
+          <li class="nav-cta-mobile"><a href="#investment-deck" class="btn btn-primary" data-i18n="cta_deck">Получить
+              инвест-дек</a></li>
         </ul>
       </nav>
       <div class="header-lang-cta">
@@ -58,10 +68,13 @@
       <div class="container">
         <p class="hero-tag" data-i18n="hero_tag">AI-тепличный комплекс на гидропонике — Казахстан</p>
         <h1 class="hero-title" data-i18n="hero_title">Опыт Антальи, потенциал Казахстана и ИИ — в одной платформе</h1>
-        <p class="hero-desc" data-i18n-html="hero_desc">Сочетаем более 10 лет опыта в экосистеме Антальи с подтверждённой практикой управления 50+ га в Казахстане и уникальной моделью управления <strong>«Нулевая ошибка»</strong> для рентабельной модернизации тепличных активов.</p>
+        <p class="hero-desc" data-i18n-html="hero_desc">Сочетаем более 10 лет опыта в экосистеме Антальи с
+          подтверждённой практикой управления 50+ га в Казахстане и уникальной моделью управления <strong>«Нулевая
+            ошибка»</strong> для рентабельной модернизации тепличных активов.</p>
         <div class="hero-cta">
           <a href="#investment-deck" class="btn btn-primary" data-i18n="cta_deck">Получить инвест-дек</a>
-          <a href="#technical-briefing" class="btn btn-secondary" data-i18n="cta_briefing">Записать технический брифинг</a>
+          <a href="#technical-briefing" class="btn btn-secondary" data-i18n="cta_briefing">Записать технический
+            брифинг</a>
         </div>
       </div>
     </section>
@@ -69,10 +82,14 @@
     <section id="value" class="section value-section">
       <div class="container">
         <h2 class="section-title" data-i18n="value_title">Ценностное предложение</h2>
-        <p class="value-statement" data-i18n="value_statement">Сельскохозяйственный опыт Антальи, потенциал Казахстана и искусственный интеллект — в одной платформе. Мы выявляем операционные слабости и превращаем проблемные активы в высокодоходные устойчивые предприятия.</p>
+        <p class="value-statement" data-i18n="value_statement">Сельскохозяйственный опыт Антальи, потенциал Казахстана и
+          искусственный интеллект — в одной платформе. Мы выявляем операционные слабости и превращаем проблемные активы
+          в высокодоходные устойчивые предприятия.</p>
         <div class="success-model">
           <h3 data-i18n="success_title">Модель успеха</h3>
-          <p data-i18n-html="success_text">Мы работаем по <strong>модели вознаграждения за результат</strong>: наш доход привязан к ROI и производственным целям вашего проекта. Доверие инвесторов строится на общем результате, а не на фиксированных гонорарах.</p>
+          <p data-i18n-html="success_text">Мы работаем по <strong>модели вознаграждения за результат</strong>: наш доход
+            привязан к ROI и производственным целям вашего проекта. Доверие инвесторов строится на общем результате, а
+            не на фиксированных гонорарах.</p>
         </div>
       </div>
     </section>
@@ -80,22 +97,26 @@
     <section id="pillars" class="section pillars-section">
       <div class="container">
         <h2 class="section-title" data-i18n="pillars_title">Техническое преимущество</h2>
-        <p class="section-intro" data-i18n="pillars_intro">Три столпа масштабируемых и привлекательных для инвестиций тепличных проектов.</p>
+        <p class="section-intro" data-i18n="pillars_intro">Три столпа масштабируемых и привлекательных для инвестиций
+          тепличных проектов.</p>
         <div class="pillars-grid">
           <article class="pillar-card">
             <div class="pillar-icon" aria-hidden="true">1</div>
             <h3 data-i18n="pillar1_title">ИИ-оптимизация</h3>
-            <p data-i18n="pillar1_text">Передовые модели ИИ для климат-контроля, управления ресурсами и максимизации урожая. Снижение энергозатрат на 15% за счёт автономных систем.</p>
+            <p data-i18n="pillar1_text">Передовые модели ИИ для климат-контроля, управления ресурсами и максимизации
+              урожая. Снижение энергозатрат на 15% за счёт автономных систем.</p>
           </article>
           <article class="pillar-card">
             <div class="pillar-icon" aria-hidden="true">2</div>
             <h3 data-i18n="pillar2_title">Гидропоника высокого уровня</h3>
-            <p data-i18n="pillar2_text">Практический опыт в производстве рассады, распространении семян и высокотехнологичных теплицах. Личный аудит большинства гидропонных объектов Казахстана.</p>
+            <p data-i18n="pillar2_text">Практический опыт в производстве рассады, распространении семян и
+              высокотехнологичных теплицах. Личный аудит большинства гидропонных объектов Казахстана.</p>
           </article>
           <article class="pillar-card">
             <div class="pillar-icon" aria-hidden="true">3</div>
             <h3 data-i18n="pillar3_title">Стратегическая реабилитация активов</h3>
-            <p data-i18n="pillar3_text">Превращение проблемных активов в высокодоходные предприятия. Управление ROI на основе данных и экспертиза логистики Анталья–Казахстан.</p>
+            <p data-i18n="pillar3_text">Превращение проблемных активов в высокодоходные предприятия. Управление ROI на
+              основе данных и экспертиза логистики Анталья–Казахстан.</p>
           </article>
         </div>
       </div>
@@ -104,9 +125,15 @@
     <section id="technology" class="section technology-section">
       <div class="container">
         <h2 class="section-title" data-i18n="tech_title">Цифровая инфраструктура и технологии</h2>
-        <p class="section-intro" data-i18n="tech_intro">Наша техническая база обеспечивает ИИ-автоматизацию и прозрачную масштабируемую работу.</p>
+        <p class="section-intro" data-i18n="tech_intro">Наша техническая база обеспечивает ИИ-автоматизацию и прозрачную
+          масштабируемую работу.</p>
         <div class="tech-content">
-          <p class="tech-text" data-i18n-html="tech_text">KazakhAgro-Pro построен на современной открытой кодовой базе — <strong>GitHub: <a href="https://github.com/umutcetiner07/Kazakhagro-Pro" target="_blank" rel="noopener noreferrer">umutcetiner07/Kazakhagro-Pro</a></strong>. Репозиторий отражает приверженность технической строгости и видению: автономные ИИ-системы управления для максимизации ROI и минимизации операционных рисков.</p>
+          <p class="tech-text" data-i18n-html="tech_text">KazakhAgro-Pro построен на современной открытой кодовой базе —
+            <strong>GitHub: <a href="https://github.com/umutcetiner07/Kazakhagro-Pro" target="_blank"
+                rel="noopener noreferrer">umutcetiner07/Kazakhagro-Pro</a></strong>. Репозиторий отражает приверженность
+            технической строгости и видению: автономные ИИ-системы управления для максимизации ROI и минимизации
+            операционных рисков.
+          </p>
           <div class="tech-badges">
             <span class="badge" data-i18n="badge_ai">Интеграция ИИ</span>
             <span class="badge" data-i18n="badge_horticulture">Управление тепличным хозяйством</span>
@@ -121,14 +148,21 @@
         <h2 class="section-title" data-i18n="leadership_title">Руководство</h2>
         <div class="leadership-card">
           <h3 data-i18n="leadership_name">Умут Четинер</h3>
-          <p class="role" data-i18n="leadership_role">Основатель kazakhagro.com | Архитектор агротех-решений | ИИ-управление теплицами и стратегия ROI</p>
+          <p class="role" data-i18n="leadership_role">Основатель kazakhagro.com | Архитектор агротех-решений |
+            ИИ-управление теплицами и стратегия ROI</p>
           <ul class="highlights">
-            <li data-i18n-html="leadership_1"><strong>Более 10 лет</strong> в ведущей аграрной экосистеме Антальи: производство рассады, распространение семян, управление теплицами.</li>
-            <li data-i18n-html="leadership_2"><strong>Более 50 га</strong> высокотехнологичных тепличных комплексов в Казахстане (Алматы, Шымкент, Астана).</li>
-            <li data-i18n-html="leadership_3">Уникальная модель управления <strong>«Нулевая ошибка»</strong>: подход на основе данных, применённый к большинству гидропонных объектов Казахстана.</li>
-            <li data-i18n="leadership_4">Вознаграждение за результат — привязка к ROI и производственным целям проекта.</li>
+            <li data-i18n-html="leadership_1"><strong>Более 10 лет</strong> в ведущей аграрной экосистеме Антальи:
+              производство рассады, распространение семян, управление теплицами.</li>
+            <li data-i18n-html="leadership_2"><strong>Более 50 га</strong> высокотехнологичных тепличных комплексов в
+              Казахстане (Алматы, Шымкент, Астана).</li>
+            <li data-i18n-html="leadership_3">Уникальная модель управления <strong>«Нулевая ошибка»</strong>: подход на
+              основе данных, применённый к большинству гидропонных объектов Казахстана.</li>
+            <li data-i18n="leadership_4">Вознаграждение за результат — привязка к ROI и производственным целям проекта.
+            </li>
           </ul>
-          <p class="linkedin-cta"><span data-i18n="linkedin_text">Связаться: </span><a href="https://www.linkedin.com/in/umut-%C3%A7etiner-39a387192" target="_blank" rel="noopener noreferrer" data-i18n="linkedin_link">LinkedIn — Умут Четинер</a></p>
+          <p class="linkedin-cta"><span data-i18n="linkedin_text">Связаться: </span><a
+              href="https://www.linkedin.com/in/umut-%C3%A7etiner-39a387192" target="_blank" rel="noopener noreferrer"
+              data-i18n="linkedin_link">LinkedIn — Умут Четинер</a></p>
         </div>
       </div>
     </section>
@@ -136,10 +170,13 @@
     <section id="investment-deck" class="section cta-section">
       <div class="container">
         <h2 class="section-title" data-i18n="cta_ready_title">Готовы инвестировать?</h2>
-        <p class="cta-desc" data-i18n="cta_ready_desc">Запросите полный инвест-дек или запишитесь на технический брифинг с нашей командой.</p>
+        <p class="cta-desc" data-i18n="cta_ready_desc">Запросите полный инвест-дек или запишитесь на технический брифинг
+          с нашей командой.</p>
         <div class="cta-buttons">
-          <a href="mailto:umutcetiner@gmail.com?subject=Investment%20Deck%20Request%20-%20KazakhAgro" class="btn btn-primary" data-i18n="cta_deck">Получить инвест-дек</a>
-          <a href="mailto:umutcetiner@gmail.com?subject=Technical%20Briefing%20-%20KazakhAgro" class="btn btn-secondary" data-i18n="cta_briefing">Записать технический брифинг</a>
+          <a href="mailto:umutcetiner@gmail.com?subject=Investment%20Deck%20Request%20-%20KazakhAgro"
+            class="btn btn-primary" data-i18n="cta_deck">Получить инвест-дек</a>
+          <a href="mailto:umutcetiner@gmail.com?subject=Technical%20Briefing%20-%20KazakhAgro" class="btn btn-secondary"
+            data-i18n="cta_briefing">Записать технический брифинг</a>
         </div>
       </div>
     </section>
@@ -147,8 +184,10 @@
     <section id="technical-briefing" class="section cta-section cta-section-alt">
       <div class="container">
         <h2 class="section-title" data-i18n="cta_briefing_title">Записать технический брифинг</h2>
-        <p class="cta-desc" data-i18n="cta_briefing_desc">Обсудите ИИ-протоколы, реабилитацию активов и целевой ROI с нашим архитектором решений.</p>
-        <a href="mailto:umutcetiner@gmail.com?subject=Technical%20Briefing%20Request" class="btn btn-primary" data-i18n="contact_us">Связаться с нами</a>
+        <p class="cta-desc" data-i18n="cta_briefing_desc">Обсудите ИИ-протоколы, реабилитацию активов и целевой ROI с
+          нашим архитектором решений.</p>
+        <a href="mailto:umutcetiner@gmail.com?subject=Technical%20Briefing%20Request" class="btn btn-primary"
+          data-i18n="contact_us">Связаться с нами</a>
       </div>
     </section>
 
@@ -158,8 +197,10 @@
         <ul class="contact-list">
           <li><a href="mailto:umutcetiner@gmail.com">umutcetiner@gmail.com</a></li>
           <li><a href="tel:+905307322081">+90 530 732 20 81</a></li>
-          <li><a href="https://www.linkedin.com/in/umut-%C3%A7etiner-39a387192" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-          <li><a href="https://github.com/umutcetiner07/Kazakhagro-Pro" target="_blank" rel="noopener noreferrer" data-i18n="github_label">GitHub — Kazakhagro-Pro</a></li>
+          <li><a href="https://www.linkedin.com/in/umut-%C3%A7etiner-39a387192" target="_blank"
+              rel="noopener noreferrer">LinkedIn</a></li>
+          <li><a href="https://github.com/umutcetiner07/Kazakhagro-Pro" target="_blank" rel="noopener noreferrer"
+              data-i18n="github_label">GitHub — Kazakhagro-Pro</a></li>
         </ul>
       </div>
     </section>
@@ -167,11 +208,13 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year"></span> <span data-i18n="footer_text">KazakhAgro. AI-тепличный комплекс на гидропонике — Казахстан. Все права защищены.</span></p>
+      <p>&copy; <span id="year"></span> <span data-i18n="footer_text">KazakhAgro. AI-тепличный комплекс на гидропонике —
+          Казахстан. Все права защищены.</span></p>
     </div>
   </footer>
 
   <script src="translations.js"></script>
   <script src="script.js" defer></script>
 </body>
+
 </html>
