feat: add Turkish (TR) language support

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="alternate" hreflang="ru" href="https://www.kazakhagro.com">
   <link rel="alternate" hreflang="en" href="https://www.kazakhagro.com">
   <link rel="alternate" hreflang="kk" href="https://www.kazakhagro.com">
+  <link rel="alternate" hreflang="tr" href="https://www.kazakhagro.com">
   <link rel="alternate" hreflang="x-default" href="https://www.kazakhagro.com">
   <meta property="og:title" content="KazakhAgro | AI-тепличный комплекс на гидропонике — Инвестиционная платформа">
   <meta property="og:description"
@@ -52,6 +53,7 @@
           <button type="button" class="lang-btn active" data-lang="ru" aria-pressed="true">RU</button>
           <button type="button" class="lang-btn" data-lang="en" aria-pressed="false">EN</button>
           <button type="button" class="lang-btn" data-lang="kk" aria-pressed="false">KK</button>
+          <button type="button" class="lang-btn" data-lang="tr" aria-pressed="false">TR</button>
         </div>
         <div class="header-cta">
           <a href="#investment-deck" class="btn btn-primary" data-i18n="cta_deck">Получить инвест-дек</a>
